--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -5,7 +5,7 @@
                 <ul>
                     <li><a href="#">Fonctionnalités</a></li>
                     <li><a href="#">Nous contactez</a></li>
-                    <li><a href="connexion.php">Connexion | Inscription</a></li>
+                    <li><a href="{{ path('connexion') }}">Connexion | Inscription</a></li>
                 </ul>
             </nav>
         </header>
