--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,17 @@
+{# templates/base.html.twig #}
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
-
-        {% block javascripts %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+    <!-- Ajoutez d'autres liens CSS ou JS ici si nécessaire -->
+    <title>{% block title %}Your Website{% endblock %}</title>
+</head>
+<body>
+    {% include 'header.html.twig' %} {# Inclusion du header ici #}
+    {% block body %}{% endblock %}
+</body>
 </html>
+
