--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,4 +1,4 @@
-{# templates/index/index.html.twig #}
+{# templates/home/index.html.twig #}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,6 +11,7 @@
 </head>
 <body>
     {% include 'header.html.twig' %}
+    <h1>Bienvenue sur votre application</h1>
 </body>
 </html>
 
