--- a/templates/etudiant/index.html.twig
+++ b/templates/etudiant/index.html.twig
@@ -1,3 +1,4 @@
+{# templates/etudiant/index.html.twig #}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -128,7 +129,7 @@
             document.getElementById("sortOrderSelect").addEventListener("change", sortTasks);
             document.getElementById("searchInput").addEventListener("input", searchTasks);
 
-            // Initialise le calendrier avec FullCalendar
+            
             $('#calendar').fullCalendar({
                 header: {
                     left: 'prev,next today',
