--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,6 +11,7 @@
 </head>
 <body>
     {% include 'header.html.twig' %}
-    <h1>Bienvenue sur votre application</h1>
+<br><br><br><br><br>
+    <h1 class=h1_home">Bienvenue sur votre application</h1>
 </body>
 </html>
